--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
     <script src="compiled/src/collections/Deck.js"></script>
     <script src="compiled/src/models/App.js"></script>
     <script src="compiled/src/models/Game.js"></script>
+    <script src="compiled/src/models/Info.js"></script>
 
     <script src="compiled/src/views/CardView.js"></script>
     <script src="compiled/src/views/HandView.js"></script>
     <script src="compiled/src/views/AppView.js"></script>
+    <script src="compiled/src/views/InfoView.js"></script>
 
     <script src="compiled/src/main.js"></script>
+    <h1 id="title">BlackJack</h1>
+    <div class="game-container"></div>
   </body>
 </html>
